<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/blackColor"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="@color/whiteColor"
            android:text="@string/titleSearch"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/txtSearch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@color/whiteColor"
                android:digits="0123456789"
                android:imeOptions="actionDone"
                android:lines="1"
                android:text="Samsung" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:onClick="btnSearchClicked"
                android:text="@string/search_btn"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/custom_button"
                android:onClick="btnCancelClicked"
                android:text="@string/cancel_btn"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtOutput"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/whiteColor"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>